[gd_scene load_steps=10 format=3 uid="uid://bbko1vt8u3g83"]

[ext_resource type="Script" path="res://Scripts/Life_berry.gd" id="1_hvx4d"]
[ext_resource type="Texture2D" uid="uid://dpd222h8h31km" path="res://Art/berry_1.png" id="2_prd17"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ld3jv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dv5i7"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dldvs"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kca24"]
size = Vector2(96, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jx2cc"]
size = Vector2(96, 96)

[sub_resource type="Gradient" id="Gradient_jid2s"]
offsets = PackedFloat32Array(0.422078, 0.538961, 0.61039, 0.675325)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.661356, 1, 1, 1, 0.542373, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rwo2g"]
gradient = SubResource("Gradient_jid2s")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Berry" type="CharacterBody2D"]
position = Vector2(1000, 1000)
collision_layer = 0
collision_mask = 0
script = ExtResource("1_hvx4d")

[node name="Timer" type="Timer" parent="."]

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="Collision" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CapsuleShape2D_ld3jv")

[node name="Sprite_0" type="Sprite2D" parent="."]
texture = ExtResource("2_prd17")
centered = false

[node name="Sprite_1" type="Sprite2D" parent="."]
centered = false

[node name="Sprite_2" type="Sprite2D" parent="."]
centered = false

[node name="Sprite_3" type="Sprite2D" parent="."]
centered = false

[node name="Dead_Sprite_0" type="Sprite2D" parent="."]
centered = false

[node name="DebugLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Collision_0" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dv5i7")

[node name="Collision_1" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dldvs")

[node name="Collision_2" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kca24")

[node name="Collision_3" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jx2cc")

[node name="HitchHike_Timer" type="Timer" parent="."]
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
scale = Vector2(16, 16)
blend_mode = 2
range_layer_min = -4
range_layer_max = 4
texture = SubResource("GradientTexture2D_rwo2g")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_vision_area_exited"]
[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="timeout" from="HitchHike_Timer" to="." method="_on_hitch_hike_timer_timeout"]
